[package]
authors = ["nishan"]
categories = ["science"]
description = "A dead simple neural network built as a learning exercise"
documentation = "https://docs.rs/artha/"
edition = "2018"
homepage = "https://gitlab.com/nrayamajhee/artha"
keywords = ["neural neural", "machine learning"]
license = "MIT/Apache-2.0"
name = "artha"
readme = "README.md"
version = "0.2.0"

[dependencies]
ndarray = "0.12.1"
ndarray-rand = "0.9.0"
pbr = "1.0.1"
rand = "0.6.5"
